@@ -42,7 +42,7 @@ setup(name='MPD_sima',
       keywords='MPD',
       long_description=DESCRIPTION,
       classifiers=classifiers,
-      install_requires=['python-musicpd>=0.4.1', 'requests>= 2.20.0'],
+      install_requires=['python-musicpd>=0.7.0', 'requests>= 2.20.0'],
       packages=find_packages(exclude=["tests"]),
       include_package_data=True,
       data_files=data_files,
