@@ -7,8 +7,10 @@ MPD_sima v0.18.0.dev1
  simadb_cli executable is removed.
  * Removed obsolete --create-db and --generate-config options
  * Fixed crash when setting XDG_CONFIG_HOME (closes #50)
- * Add abstract unix socket support for MPD connection (need at least
- python-musicpd 0.6.0)
+ * Add abstract unix socket support for MPD connection
+ * Better MPD connection management.
+ * Need at least python-musicpd 0.7.0.
+   Abstract socket in v0.6.0 and socket timeout in v0.7.0
 
  -- kaliko <kaliko@azylum.org>  Wed, 28 Apr 2021 17:21:39 +0200
 
